--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="shortcut icon" type="image/webp" href="favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="style-minifier.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="style-minifier.css">
 
     <title>La Panthère ! Entreprise de Web Design à Lyon</title>
 
@@ -265,6 +265,7 @@
 <script src="./js/jquery-2.1.0.js"></script>
 <script src="./js/bootstrap.js"></script>
 <script src="./js/blocs.js"></script>
+<script src="./js/jqBootstrapValidation.js"></script>
 <script src="./js/jquery.touchSwipe.js" defer></script>
 <script src="./js/gmaps.js"></script>
 </body>
