--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!--Robots-->
 	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index, follow">
-    <link rel="shortcut icon" type="image/webp" href="favicon.webp">
+    <link rel="shortcut icon" type="image/webp" href="img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
