--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
-    <title>Contact agence La Panthère</title>
+    <title>Contact - La Panthère</title>
 
     
 <!-- Analytics -->
