--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>La Panthère ! Entreprise de Web Design à Lyon</title>
+    <title>Agence Web Design à Lyon - La Panthère</title>
 
     
 <!-- Analytics -->
@@ -63,7 +63,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" height="100px" width="100px" alt="Agence La Panthère, agence web paris, création logo paris">
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					Agence web a lyon
 				</h1>
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
